master

3.13.2
- aeosynth
  fix another QT bug

3.13.1
- aeosynth
  fix quote threading bug

3.13.0
- aeosynth
  Quote Threading toggle - checkbox and 't' keybind
- Mayhem
  New feature: Menu, which
    - replaces and includes Report Button and Delete Button.
    - add one-click Filter buttons.
    - add download links to automatically save the file with its original filename. Chrome-only currently.
    - add archive links.
    - can integrate features from external userscripts/extensions, see https://github.com/MayhemYDG/4chan-x/wiki/Menu-API
  The updater's refresh interval will now increase gradually in inactive threads:
    - "Inactive thread" defines a thread that has not received any replies since its last refresh.
    - Threads receiving a reply will have its updater interval reset to user's setting.
    - The refresh interval will grow up to 90 seconds on visible tabs.
    - Unfocused tabs will grow up to 120, 300, then 600 seconds.
    - It takes at least 230 seconds to get to 120, at least 350 seconds to get to 300, and at least 650 seconds to get to 600.
    - Focusing back to a tab will reset its inactivity state to normal.
    - It basically changes nothing, but it salvages 4chan from being slaughtered by a massive amount of concurrent connections.
  The updater's refresh interval is now limited to 5 seconds minimum.
  Add Country filtering.

3.12.0
- aeosynth
  fix post hiding
- Stallmanu  
  Sage keybind
- Mayhem
  Update/fix archive redirection method.

3.11.0
- aeosynth
  add /ck/ archive
  change /jp/ archive to warosu
- Mayhem
  Add /sp/ archive redirection.
  Fix QR with the new captcha loading method.
  The QR will now work on /f/ too.
  Revert changes that broke fetchers in Firefox.
  After 1000+ characters, a character counter will appear in the QR.
  Add /soc/ archive redirection.
  Add /r9k/ archive redirection.
  Dead quotes can now be previewed or inlined with compatible archivers.
  Opera fixes.
  /f/ fixes.
- btmcsweeney